# python-sdk

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  changelog.md  contributing.md  makefile  manifest.in  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests_with_timeout.py  security.md  setup.cfg  setup.py  test_fix_verification.py  test_sdk2.py  tox.ini
.claude/: settings.local.json
.github/.workflows/: ci-staging.yml
.github/workflows/: ci-master.yml  ci-staging.yml
.github/workflows/disabled/: ci.yml  publish.yml  security.yml
docs/: api.md  build_instructions.md
examples/: advanced_usage.py  basic_usage.py  django_integration.py  flask_integration.py
featureflagshq/: __init__.py  sdk.py
scripts/: build.sh  dev-setup.sh  release.sh  test.sh
src/featureflagshq/: __init__.py  _version.py  exceptions.py  models.py  py.typed  sdk.py  sdk1.py  sdk2.py
tests/: conftest.py  test_integration.py  test_sdk.py
tests/integration/: test_integration.py
tests/unit/: test_api_responses.py  test_context_manager.py  test_edge_cases.py  test_exceptions.py  test_models.py  test_network_errors.py  test_rollout_evaluation.py  test_sdk.py  test_security.py
